 - SMPI now adds 16 bytes of header to each message sent, in order to simulate
   metadata that are added to each MPI message by MPI libraries (tag,
   src/dest, and communicator information). This may change simulation times
   for very small message sizes, but should be more realistic.

S4U:
 - the on_exit() of each actor is also executed when the simulation deadlocks.

SMPI:
 - Update proxy apps coverage of new ECP apps: 60+ apps now tested nightly on 
   https://framagit.org/simgrid/SMPI-proxy-apps
 - MPI/IO: supports names starting with "./"
 - Fortran: many MPI/IO bindings, support for MPI_UB/LB, C MPI_INT/FLOAT/DOUBLE
   datatypes.
 - smpicc/cxx/ff/f90 now will actually perform definition checks at link time. When
   building shared libraries, this may cause issues, so environment variable
   SMPI_NO_UNDEFINED_CHECK can be added to disable this.

C binding:
 - The return type of the sg_actor_on_exit() callbacks is now 'void'
   (int value was previously ignored)

General:
 - LTO is now enabled for Intel/clang compilers.
 - LTO behavior on GCC can be parameterized using LTO_EXTRA_FLAG in cmake.
   Setting it to "auto" will use all available cores, while setting it to n will
   use n cores to speedup link step (usage: cmake -DLTO_EXTRA_FLAG=4).

C interface:
 - Many MSG tests were converted to the new S4U's interface in C, that
   was extended for that.

Simix:
 - Remove obsolete option --cfg=contexts/parallel-threshold.

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GF: issues on GForge; GH: issues on GitHub)
 - FG#41: Add sg_actor_create C interface
 - FG#43: xbt::random needs some care
 - FG#48: The Impossible Did Happen (yet again)
 - FG#50: Suspending an actor executed at the current timestamp fails
 - FG!24: Documentation and fix for xbt/random
 - FG!35: Add a modeling hint for parallel links in doc
 - FG!36: [xbt/random] Read/Write the state of the RNG
 - GF#18137: Allow different stack sizes?